<resources>
    <string name="app_name">Are You Bored?</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="recommended_activities">Recommended Activities:</string>
    <string name="here_are_our_suggestions_for_your_profile">Here are our suggestions for your profile:</string>
    <string name="john">John</string>
    <string name="doe">Doe</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="then_fill_out_this_form">Then fill out this form:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="age">Age:</string>
    <string name="i_am_willing_to_spend">I am willing to spend:</string>
    <string name="gender">Gender:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="i_used_bored_before">I used Bored before</string>
    <string name="submit">Submit</string>
    <string name="i_want_to_be_outdoors">I want to be outdoors:</string>
</resources>
