<?xml version="1.0" encoding="utf-8"?>
<!--
Marija Jovicic
Final Project
6/6/2020
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/firstName"
            android:layout_width="193dp"
            android:layout_height="45dp"
            android:layout_marginStart="132dp"
            android:layout_marginLeft="132dp"
            android:layout_marginTop="12dp"
            android:hint="@string/john"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textColor="@color/textColor"
             />

        <EditText
            android:id="@+id/lastName"
            android:textColor="@color/textColor"
            android:layout_width="193dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/doe"
            app:layout_constraintStart_toEndOf="@+id/fName2"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="190dp"
            android:layout_height="42dp"
            android:hint="@string/johndoe_gmail_com"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@+id/fName3"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />

        <EditText
            android:id="@+id/profileAge"
            android:layout_width="110dp"
            android:layout_height="39dp"
            android:layout_marginTop="11dp"
            android:inputType="number"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@+id/fName4"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

        <EditText
            android:id="@+id/profileGender"
            android:textColor="@color/textColor"
            android:layout_width="161dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintStart_toEndOf="@+id/fName4"
            app:layout_constraintTop_toBottomOf="@+id/profileAge" />

        <TextView
            android:id="@+id/textView"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/then_fill_out_this_form"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fName"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <TextView
            android:id="@+id/fName2"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/last_name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName" />

        <TextView
            android:id="@+id/fName3"
            android:textColor="@color/textColor"
            android:layout_width="144dp"
            android:layout_height="33dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/email_address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName2" />

        <TextView
            android:id="@+id/fName4"
            android:textColor="@color/textColor"
            android:layout_width="54dp"
            android:layout_height="31dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/age"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName3" />

        <TextView
            android:id="@+id/fName5"
            android:textColor="@color/textColor"
            android:layout_width="203dp"
            android:layout_height="33dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/i_am_willing_to_spend"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName6" />

        <TextView
            android:id="@+id/fName6"
            android:textColor="@color/textColor"
            android:layout_width="81dp"
            android:layout_height="31dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName4" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="118dp"
            android:layout_height="34dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:theme="@style/spinnerTheme"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fName5"
            app:layout_constraintTop_toBottomOf="@+id/profileGender" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:textColor="@color/textColor"
            android:layout_width="299dp"
            android:layout_height="43dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/radioYes"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/yes"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioNo"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/no"
                android:textSize="15sp" />


        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/i_used_bored_before"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/button"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_marginStart="236dp"
            android:layout_marginLeft="236dp"
            android:layout_marginTop="180dp"
            android:onClick="submit"
            android:text="@string/submit"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/textView3"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/i_want_to_be_outdoors"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>